# BD2_414_431_433_437_YAMR

./: CMakeLists.txt  README.md  config.txt
src/: CMakeLists.txt  communication_network.h  encoder.h  general.h  hash.cpp  mapinput.cpp  mapinput.h  mapper.cpp  mapper.h  mapreduce.cpp  mapreduce.h  netcomm.cpp  netpacket.h  reduceinput.cpp  reduceinput.h  reducer.cpp  reducer.h  register.h  spec.h
tests/: CMakeCache.txt  CMakeLists.txt  testing_map.cpp  testing_map_reduce.cpp  testing_red.cpp
